objects/ortoo_qra__Active_Record_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>ortoo_qra__Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <referenceTo>ortoo_qra__Assignment_Group__c</referenceTo>
        <relationshipLabel>Active Record Criterias</relationshipLabel>
        <relationshipName>Active_Record_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Active Record Criteria</label>
    <nameField>
        <label>Active Record Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active Record Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>